# keter-duty-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
sb/: Makefile  app.sb  app_old.sb  files.sb  shell.sb
sb/app/: blender.sb  default.sb  desmume.sb  discord.sb  droidstudio.sb  guilded.sb  multimc.sb  zed.sb  zoom.sb
sb/app/Discord-Sandbox-Profile/: LICENSE  README.md  discord.sb
sb/dev/: conda.sb  pythob.sb  rusts.sb
src/: main.rs  utils.rs
src/template/: mod.rs
