[package]
name = "keter_duty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "3.2.25", features =[ "derive" ] }
directories = "4.0.1"
dirs = "4.0.0"
include_dir = "0.7.4"
once_cell = "1.19.0"
tera = "1.20.0"
walkdir = "2.5.0"
whoami = "1.5.1"

[features]
