[package]
name = "kd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "3.2.25", features =[ "derive" ] }
directories = "4.0.1"
dirs = "4.0.0"
include_dir = "0.7.4"
once_cell = "1.21.3"
tera = "1.20.0"
walkdir = "2.5.0"
whoami = "1.6.0"

[features]
